--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="heart_rate_checking">Heart Rate Checking ...</string>
     <string name="heart_rate_warning">Please wear Smart Watch, and with a good fit</string>
     <string name="wear_not_correct_try_again">Check wear way and try again, please.</string>
+    <string name="heart_rate_timeout">Checking timeout</string>
 </resources>
